k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-exelcia
  annotations:
    konghq.com/strip-path: "true"
  #  konghq.com/path: "/"
  #  kubernetes.io/ingress.class: "kong"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - backend:
          service:
            name: apache-service
            port: 
              number: 80
        path: /apache
        pathType: Prefix
      - backend:
          service:
            name: nginx-service
            port: 
              number: 80
        path: /nginx
        pathType: Prefix
